# matrix_back

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
docker/: Dockerfile  nginx.conf  redis.conf  sentinel.conf
docs/: RELEASE_PLAN.txt
project/: account_creator.py  alembic.ini  pyproject.toml  run.py
project/alembic/: env.py
project/alembic/versions/: 20241209_remove_unique_telegram_id.py  20241211_add_frozen_balance.py  20241218_recreate_giftasset_tables.py  20251226_add_premium_purchases_v2.py  20251227_add_bundle_offers.py  20251227_add_nft_bundles_and_order_logs.py  a49c5268d82c_initial_migration_with_stars.py  buy_orders_module.py  ca884ab85b6f_initial_schema.py  ff81c827f56c_merge_bundles_and_buy_orders.py  fffe5004a96d_add_promoted_nfts_table.py
project/app/: paths.py  telegram_init.py
project/app/account/: __init__.py  _base.py  _exceptions.py  _telegram.py  account.py
project/app/api/: auth.py  cache_key_builder.py  exception_handlers.py  utils.py
project/app/api/routers/: __init__.py  admin.py  base.py  bot.py  health.py
project/app/api/schemas/: __init__.py  account.py  auction.py  base.py  channel.py  market.py  nft.py  trade.py  user.py
project/app/bot/: __init__.py  functions.py  handlers.py  throttling.py
project/app/configs/: __init__.py
project/app/db/: __init__.py  crud.py  database.py  uow.py  utils.py
project/app/db/models/: __init__.py  auction.py  base.py  bundle.py  bundle_offer.py  buy_order.py  channel.py  giftasset.py  market.py  nft.py  order_log.py  promotion.py  stars.py  tonnel.py  trade.py  user.py
project/app/integrations/: README.md  __init__.py  _base.py  _base_schemas.py  _http_composer.py
project/app/integrations/fragment/: __init__.py  integration.py
project/app/integrations/mrkt/: integration.py  route.py  schemas.py
project/app/integrations/portals/: integration.py  route.py  schemas.py
project/app/integrations/tonnel/: integration.py  route.py  schemas.py
project/app/modules/: __init__.py
project/app/modules/accounts/: __init__.py  exceptions.py  repository.py  router.py  schemas.py  service.py  use_cases.py
project/app/modules/aggregator/: __init__.py  exceptions.py  router.py  schemas.py  service.py  use_cases.py
project/app/modules/auctions/: __init__.py  exceptions.py  repository.py  router.py  schemas.py  service.py  use_cases.py
project/app/modules/bundles/: exceptions.py  repository.py  router.py  schemas.py  service.py  use_cases.py
project/app/modules/buy_orders/: __init__.py  constants.py  exceptions.py  repository.py  router.py  schemas.py  service.py  use_cases.py
project/app/modules/channels/: __init__.py  exceptions.py  repository.py  router.py  schemas.py  service.py  use_cases.py
project/app/modules/giftasset/: __init__.py  exceptions.py  repository.py  router.py  schemas.py  service.py  use_cases.py
project/app/modules/market/: __init__.py  exceptions.py  repository.py  router.py  schemas.py  service.py  use_cases.py
project/app/modules/nft/: __init__.py  exceptions.py  repository.py  router.py  schemas.py  service.py  use_cases.py
project/app/modules/offers/: __init__.py  exceptions.py  repository.py  router.py  schemas.py  service.py  tasks.py  use_cases.py
project/app/modules/presale/: __init__.py  exceptions.py  repository.py  router.py  schemas.py  service.py  use_cases.py
project/app/modules/promotion/: __init__.py  exceptions.py  repository.py  router.py  schemas.py  service.py  tasks.py  use_cases.py
project/app/modules/stars/: __init__.py  exceptions.py  repository.py  router.py  schemas.py  service.py  use_cases.py
project/app/modules/trades/: __init__.py  exceptions.py  repository.py  router.py  schemas.py  service.py  use_cases.py
project/app/modules/unified/: __init__.py  exceptions.py  repository.py  router.py  schemas.py  service.py  use_cases.py
project/app/modules/users/: __init__.py  exceptions.py  repository.py  router.py  schemas.py  service.py  use_cases.py
project/app/shared/: __init__.py  base_repository.py  exceptions.py
project/app/utils/: background_tasks.py  cache.py  locks.py  logger.py  retry.py  security.py
project/app/wallet/: __init__.py  wallet.py
project/media/: .gitkeep
scripts/: check_db_counts.py  create_docker_user.py  generate_encryption_key.py  generate_test_wallet.py  lint-check.bat  lint.bat  lint.sh  migrate_sensitive_data.py  refresh_tokens.py  run_bot_polling.py  seed_10k_data.py  seed_market_charts.py  seed_swagger_data.py  seed_test_data.py  set_webhook.bat  set_webhook.py  test_market_endpoint.py  update_logging.py
tests/: FIX_TESTS.md  HEAVY_ENDPOINTS_TESTS.md  REF_TESTS_SUMMARY.md  TESTS_CREATED.txt  TESTS_OVERVIEW.md  check_indexes.py  check_markets.py  check_tables.py  check_test_users.py  clean_all_test_data.py  clean_test_data.py  conftest.py  force_clean_test_data.py  recreate_test_db.py  run_heavy_tests.bat  run_model_tests.bat  run_ref_tests.bat  run_ref_tests.sh  seed_bugfix_test.py  simple_clean.py  test_background_tasks.py  test_bugfixes.py  test_bundles_and_offers.py  test_encryption_integration.py  test_exceptions.py  test_heavy_endpoints.py  test_idempotency.py  test_models_baseline.py  test_models_complete.py  test_race_conditions.py  test_redis_locks.py  test_redis_performance.py  test_retry.py  test_security.py  test_tonnel_integration.py  test_uow.py  (+1 more)
(+160 files in other folders)
